# homework28

./: db.sqlite3  manage.py  pyproject.toml
ads/: models.py  urls_ad.py  urls_cat.py  views.py
ads/urls/: urls_us.py
ads/views/: views_ad.py  views_us.py
levito/: asgi.py  settings.py  urls.py  wsgi.py
