[tool.poetry]
name = "homework27-2"
version = "0.1.0"
description = ""
authors = ["Evlit <evlit23@gmail.com>"]
readme = "README.md"
packages = [{include = "homework27_2"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
